--- a/Frontend/src/app/pages/immobiliers-for-sale/immobiliers-for-sale.component.html
+++ b/Frontend/src/app/pages/immobiliers-for-sale/immobiliers-for-sale.component.html
@@ -122,13 +122,13 @@
     <div *ngFor="let Immobilier of Immobiliers" class="col-3">
       <div class="card shadow">
         <div class="card-header border-0">
-          <h3 class="mb-0">House in {{Immobilier.ville}}</h3>
+          <h3 class="mb-0">House in {{Immobilier.ville}} &nbsp;&nbsp; ID: {{Immobilier.id}}</h3>
         </div>
         <div class="card-body">
-          <img src="{{Immobilier.image}}" alt="image of the real estate">
-        </div>
+          <img width= "320" height="200" src="{{Immobilier.image}}" alt="image of the real estate">
+        </div>  
         <div class="card-footer py-4">
-            <span>Price: {{Immobilier.price}}</span><br>
+            <span>Price: {{Immobilier.price}}.000 $</span><br>
             <span>Surface: {{Immobilier.surface}}</span>
         </div>
       </div>
