--- a/Frontend/src/app/pages/register/register.component.html
+++ b/Frontend/src/app/pages/register/register.component.html
@@ -1,9 +1,9 @@
-<div class="header bg-gradient-danger py-7 py-lg-8">
+<div class="header bg-gradient-secondary py-7 py-lg-8">
   <div class="container">
     <div class="header-body text-center mb-7">
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
-          <h1 class="text-white">Welcome!</h1>
+          <h1 class="text-black">Welcome!</h1>
           <p class="text-lead text-light"></p>
         </div>
       </div>
