--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -45,15 +45,14 @@
           </div>
           <a
             routerLinkActive="active"
-            [routerLink]="['/user-profile']"
+            [routerLink]="['/User/profile']"
             class="dropdown-item"
           >
             <i class="ni ni-single-02"></i>
             <span>My profile</span>
           </a>
           <a
-            routerLinkActive="active"
-            [routerLink]="['/user-profile']"
+            href="User/profile#settings"
             class="dropdown-item"
           >
             <i class="ni ni-settings-gear-65"></i>
@@ -61,7 +60,7 @@
           </a>
           <a
             routerLinkActive="active"
-            [routerLink]="['/user-profile']"
+            [routerLink]="['/User/tables']"
             class="dropdown-item"
           >
             <i class="ni ni-calendar-grid-58"></i>
