--- a/Frontend/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/Frontend/src/app/layouts/auth-layout/auth-layout.component.html
@@ -23,7 +23,7 @@
         <div class="navbar-collapse-header d-md-none">
           <div class="row">
             <div class="col-6 collapse-brand">
-              <a routerLinkActive="active" [routerLink]="['/User/dashboard']">
+              <a routerLinkActive="active" [routerLink]="['/User/ImmobiliersForSale']">
                Estate Chain
               </a>
             </div>
