--- a/Frontend/src/app/pages/register/register.component.html
+++ b/Frontend/src/app/pages/register/register.component.html
@@ -95,12 +95,12 @@
                 />
               </div>
             </div>
-            <div class="text-muted font-italic">
+            <!--<div class="text-muted font-italic">
               <small
                 >password strength:
                 <span class="text-success font-weight-700">strong</span></small
               >
-            </div>
+            </div> -->
             <div class="row my-4">
               <div class="col-12">
                 <div
