--- a/Frontend/src/app/components/sidebar/sidebar.component.html
+++ b/Frontend/src/app/components/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <!-- Brand -->
-    <a class="navbar-brand pt-0" routerLinkActive="active" [routerLink]="['/dashboard']">
+    <a class="navbar-brand pt-0" routerLinkActive="active" [routerLink]="['/']">
       <img src="./assets/img/brand/red.png" width="100%" class="navbar-brand-img" alt="...">
     </a>
     <!-- User -->
@@ -26,7 +26,7 @@
         <a class="nav-link" role="button" ngbDropdownToggle>
           <div class="media align-items-center">
             <span class="avatar avatar-sm rounded-circle">
-              <img class="EClogo" alt="Image placeholder" src="./assets/img/theme/team-1-800x800.jpg">
+              <img class="EClogo" alt="Image placeholder" src="./assets/img/theme/team-4-800x800.jpg">
             </span>
           </div>
         </a>
@@ -34,15 +34,15 @@
           <div class=" dropdown-header noti-title">
             <h6 class="text-overflow m-0">Welcome!</h6>
           </div>
-          <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
+          <a routerLinkActive="active" [routerLink]="['/User/profile']" class="dropdown-item">
             <i class="ni ni-single-02"></i>
             <span>My profile</span>
           </a>
-          <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
+          <a href="User/profile#settings" class="dropdown-item">
             <i class="ni ni-settings-gear-65"></i>
             <span>Settings</span>
           </a>
-          <a routerLinkActive="active" [routerLink]="['/user-profile']" class="dropdown-item">
+          <a routerLinkActive="active" [routerLink]="['/User/tables']" class="dropdown-item">
             <i class="ni ni-calendar-grid-58"></i>
             <span>Activity</span>
           </a>
@@ -51,7 +51,7 @@
             <span>Support</span>
           </a>
           <div class="dropdown-divider"></div>
-          <a href="#!" class="dropdown-item">
+          <a id="logout" (click)="Logout()" class="dropdown-item">
             <i class="ni ni-user-run"></i>
             <span>Logout</span>
           </a>
@@ -104,18 +104,18 @@
       <!-- Navigation -->
       <ul class="navbar-nav mb-md-3">
         <li class="nav-item">
-          <a class="nav-link" href="#">
-            <i class="ni ni-shop"></i> Add New Immobilier
+          <a class="nav-link" href="/User/AddImmobilier">
+            <i class="ni ni-building"></i> Add New Immobilier
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="/User/ModifyImmobilier">
             <i class="ni ni-ui-04"></i> Modify Immobilier
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
-            <i class="ni ni-money-coins"></i> Add New Transaction
+          <a class="nav-link" href="/User/tables">
+            <i class="ni ni-money-coins"></i> View Transactions
           </a>
         </li>
       </ul>
