--- a/Frontend/src/app/pages/login/login.component.html
+++ b/Frontend/src/app/pages/login/login.component.html
@@ -4,6 +4,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-6">
           <h1 class="text-black">Welcome!</h1>
+          <p class="text-lead text-light"></p>
         </div>
       </div>
     </div>
@@ -23,8 +24,9 @@
 </div>
 <!-- Page content -->
 <div class="container mt--8 pb-5">
+  <!-- Table -->
   <div class="row justify-content-center">
-    <div class="col-lg-5 col-md-7">
+    <div class="col-lg-6 col-md-8">
       <div class="card bg-secondary shadow border-0">
         <div class="card-header bg-transparent pb-5 text-center">
           Sign in with credentials
