--- a/Frontend/src/app/pages/my-immobilier/my-immobilier.component.html
+++ b/Frontend/src/app/pages/my-immobilier/my-immobilier.component.html
@@ -1,1 +1,168 @@
-<p>my-immobilier works!</p>
+<div class="header bg-gradient-primary pb-8 pt-5 pt-md-8">
+    <div class="container-fluid">
+      <div class="header-body">
+        <!-- Card stats -->
+        <!-- <div class="row">
+          <div class="col-xl-3 col-lg-6">
+            <div class="card card-stats mb-4 mb-xl-0">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <h5 class="card-title text-uppercase text-muted mb-0">
+                      Traffic
+                    </h5>
+                    <span class="h2 font-weight-bold mb-0">350,897</span>
+                  </div>
+                  <div class="col-auto">
+                    <div
+                      class="icon icon-shape bg-danger text-white rounded-circle shadow"
+                    >
+                      <i class="fas fa-chart-bar"></i>
+                    </div>
+                  </div>
+                </div>
+                <p class="mt-3 mb-0 text-muted text-sm">
+                  <span class="text-success mr-2"
+                    ><i class="fa fa-arrow-up"></i> 3.48%</span
+                  >
+                  <span class="text-nowrap">Since last month</span>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-lg-6">
+            <div class="card card-stats mb-4 mb-xl-0">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <h5 class="card-title text-uppercase text-muted mb-0">
+                      New users
+                    </h5>
+                    <span class="h2 font-weight-bold mb-0">2,356</span>
+                  </div>
+                  <div class="col-auto">
+                    <div
+                      class="icon icon-shape bg-warning text-white rounded-circle shadow"
+                    >
+                      <i class="fas fa-chart-pie"></i>
+                    </div>
+                  </div>
+                </div>
+                <p class="mt-3 mb-0 text-muted text-sm">
+                  <span class="text-danger mr-2"
+                    ><i class="fas fa-arrow-down"></i> 3.48%</span
+                  >
+                  <span class="text-nowrap">Since last week</span>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-lg-6">
+            <div class="card card-stats mb-4 mb-xl-0">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <h5 class="card-title text-uppercase text-muted mb-0">
+                      Sales
+                    </h5>
+                    <span class="h2 font-weight-bold mb-0">924</span>
+                  </div>
+                  <div class="col-auto">
+                    <div
+                      class="icon icon-shape bg-yellow text-white rounded-circle shadow"
+                    >
+                      <i class="fas fa-users"></i>
+                    </div>
+                  </div>
+                </div>
+                <p class="mt-3 mb-0 text-muted text-sm">
+                  <span class="text-warning mr-2"
+                    ><i class="fas fa-arrow-down"></i> 1.10%</span
+                  >
+                  <span class="text-nowrap">Since yesterday</span>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-3 col-lg-6">
+            <div class="card card-stats mb-4 mb-xl-0">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col">
+                    <h5 class="card-title text-uppercase text-muted mb-0">
+                      Performance
+                    </h5>
+                    <span class="h2 font-weight-bold mb-0">49,65%</span>
+                  </div>
+                  <div class="col-auto">
+                    <div
+                      class="icon icon-shape bg-info text-white rounded-circle shadow"
+                    >
+                      <i class="fas fa-percent"></i>
+                    </div>
+                  </div>
+                </div>
+                <p class="mt-3 mb-0 text-muted text-sm">
+                  <span class="text-success mr-2"
+                    ><i class="fas fa-arrow-up"></i> 12%</span
+                  >
+                  <span class="text-nowrap">Since last month</span>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div> -->
+      </div>
+    </div>
+  </div>
+  <!-- Page content -->
+  <div class="container-fluid mt--7">
+    <!-- Table -->
+    <div class="row">
+      <div *ngFor="let Immobilier of Immobiliers" class="col-xl-3 col-lg-6">
+        <div class="imgCard">
+        <div class="card shadow">
+          <div class="card-header border-0">
+            <h3 class="mb-0">House in {{Immobilier.ville}} ---- ID: {{Immobilier.id}}</h3>
+          </div>
+          <div class="card-body">
+            <img width="320" height="200" src="{{Immobilier.image}}" alt="image of the real estate">
+          </div>
+          <div class="card-footer py-4">
+            <span>Price: {{Immobilier.price}} ether</span><br>
+            <span>Surface: {{Immobilier.surface}} m^2</span>
+            <div>
+              <button class="btn btn-lg btn-outline-primary"><a href="User/ModifyImmobilier/{{Immobilier.id}}">Edit</a></button>
+            
+            </div>
+          </div>
+          
+        </div>
+      </div>
+     </div>
+    </div>
+  
+  </div>
+  
+  <ng-template #mymodal let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Editing Immobilier</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">×</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      
+          <label>
+              Private key:
+            <input type="text" class="form-control" name="privateKey" [(ngModel)]="privateKey">
+            {{privateKey}}
+          </label>
+       
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-outline-info" (click)="transfertImmobilier()">transfert</button>
+      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Close</button>
+    </div>
+  </ng-template>
+  
