--- a/Frontend/src/app/pages/tables/tables.component.html
+++ b/Frontend/src/app/pages/tables/tables.component.html
@@ -1,120 +1,11 @@
-<div class="header bg-gradient-danger pb-8 pt-5 pt-md-8">
+<div class="header bg-gradient-red pb-8 pt-5 pt-md-8">
   <div class="container-fluid">
     <div class="header-body">
-      <!-- Card stats -->
-      <div class="row">
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">
-                    Traffic
-                  </h5>
-                  <span class="h2 font-weight-bold mb-0">350,897</span>
-                </div>
-                <div class="col-auto">
-                  <div
-                    class="icon icon-shape bg-danger text-white rounded-circle shadow"
-                  >
-                    <i class="fas fa-chart-bar"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"
-                  ><i class="fa fa-arrow-up"></i> 3.48%</span
-                >
-                <span class="text-nowrap">Since last month</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">
-                    New users
-                  </h5>
-                  <span class="h2 font-weight-bold mb-0">2,356</span>
-                </div>
-                <div class="col-auto">
-                  <div
-                    class="icon icon-shape bg-warning text-white rounded-circle shadow"
-                  >
-                    <i class="fas fa-chart-pie"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-danger mr-2"
-                  ><i class="fas fa-arrow-down"></i> 3.48%</span
-                >
-                <span class="text-nowrap">Since last week</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">
-                    Sales
-                  </h5>
-                  <span class="h2 font-weight-bold mb-0">924</span>
-                </div>
-                <div class="col-auto">
-                  <div
-                    class="icon icon-shape bg-yellow text-white rounded-circle shadow"
-                  >
-                    <i class="fas fa-users"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-warning mr-2"
-                  ><i class="fas fa-arrow-down"></i> 1.10%</span
-                >
-                <span class="text-nowrap">Since yesterday</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">
-                    Performance
-                  </h5>
-                  <span class="h2 font-weight-bold mb-0">49,65%</span>
-                </div>
-                <div class="col-auto">
-                  <div
-                    class="icon icon-shape bg-info text-white rounded-circle shadow"
-                  >
-                    <i class="fas fa-percent"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"
-                  ><i class="fas fa-arrow-up"></i> 12%</span
-                >
-                <span class="text-nowrap">Since last month</span>
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+      
+
     </div>
   </div>
-</div>
+</div> -->
 <!-- Page content -->
 <div class="container-fluid mt--7">
   <!-- Table -->
@@ -122,26 +13,23 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header border-0">
-          <h3 class="mb-0">Card tables</h3>
+          <h3 class="mb-0">Transactions</h3>
         </div>
         <div class="table-responsive">
           <table class="table align-items-center table-flush">
             <thead class="thead-light">
               <tr>
-                <th scope="col">id</th>
-                <th scope="col">localisation</th>
-                <th scope="col">status</th>
-                <th scope="col">category</th>
-                <th scope="col">ownerName</th>
-                <th scope="col">ownerAddress</th>
-                <th scope="col">forSell</th>
-                <th scope="col">description</th>
-                <th scope="col">creation_date</th>
+                <th scope="col">Transaction id</th>
+                <th scope="col">addressrecipent</th>
+                <th scope="col">address owner</th>
+                <th scope="col">price</th>
+                <th scope="col">address buyer</th>
+                <th scope="col">price tran</th>
                 <th scope="col"></th>
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let Immobilier of Immobiliers">
+              <tr *ngFor="let Transaction of Transactions">
                 <th scope="row">
                   <div class="media align-items-center">
                     <a
@@ -150,48 +38,59 @@
                     >
                       <img
                         alt="Image placeholder"
-                        src="../assets/img/theme/bootstrap.jpg"
+                        src="../assets/img/theme/Transaction.jpg"
                       />
                     </a>
                     <div class="media-body">
-                      <span class="mb-0 text-sm">{{ Immobilier.id }}</span>
+                      <span class="mb-0 text-sm">{{ Transaction.id }}</span>
                     </div>
                   </div>
                 </th>
                 <td>
-                  {{ Immobilier.localisation }}
+                  {{ Transaction.addressrecipent }}
                 </td>
-                <td>
+                <!-- <td>
                   <span class="badge badge-dot mr-4">
                     <i
-                      *ngIf="Immobilier.status == 'WAITING'"
+                      *ngIf="Transaction.status == 'WAITING'"
                       class="bg-warning"
                     ></i>
                     <i
-                      *ngIf="Immobilier.status == 'APPROVED'"
+                      *ngIf="Transaction.status == 'APPROVED'"
                       class="bg-success"
                     ></i>
-                    {{ Immobilier.status }}
+                    {{ Transaction.Transaction_id }}
                   </span>
                 </td>
+                -->
                 <td>
-                  {{ Immobilier.category }}
+                  {{ Transaction.immobilier.addressOwner }}
                 </td>
                 <td>
-                  {{ Immobilier.ownerName }}
+                  <div class="media align-items-center">
+                    <div class="media-body">
+                      <span class="mb-0 text-sm">{{ Transaction.immobilier.price }}</span>
+                    </div>
+                    <a
+                      href="javascript:void(0)"
+                      class="avatar rounded-circle mr-3"
+                    >
+                      <img
+                        alt="Image placeholder"
+                        src="../assets/img/theme/ether.png"
+                      />
+                    </a>
+                  </div>
+                  
                 </td>
                 <td>
-                  {{ Immobilier.ownerAddress }}
+                  {{ Transaction.addressBuyer }}
                 </td>
                 <td>
-                  {{ Immobilier.forSell }}
+                  {{ Transaction.priceTran }}
                 </td>
-                <td>
-                  {{ Immobilier.description }}
-                </td>
-                <td>
-                  {{ Immobilier.creation_date }}
-                </td>
+ 
+
                 <td class="text-right">
                   <div ngbDropdown placement="bottom-right">
                     <a
@@ -208,8 +107,8 @@
                         class="dropdown-item"
                         [routerLink]="[
                           '/Admin/',
-                          'ImmobilierDetails',
-                          Immobilier.id
+                          'TransactionDetails',
+                          Transaction.id
                         ]"
                         >Details</a
                       >
